# vectorworks-plugin-script-import-ifc-homeskz

./: .gitignore  CLAUDE.md  README.md  codecov.yml  main.py  pyproject.toml
.github/workflows/: test.yml
src/vectorworks_plugin_import_ifc_homeskz/: __init__.py  document.py  member.py  story.py  tracing.py
src/vectorworks_plugin_import_ifc_homeskz/ifc/: __init__.py  anchor_bolt.py  column.py  column_mark.py  fire_brace.py  floor.py  floor_post.py  footing.py  grid.py  joint.py  loader.py  member.py  noboribari.py  rafter.py  rebar.py  roof.py  section.py  sheet.py  tag.py  (+2 more)
src/vw_import_ifc_homeskz/: __init__.py  grid.py
tests/: conftest.py  test_document.py  test_grid.py  test_ifc_anchor_bolt.py  test_ifc_column.py  test_ifc_column_mark.py  test_ifc_column_span.py  test_ifc_fire_brace.py  test_ifc_floor.py  test_ifc_floor_post.py  test_ifc_footing.py  test_ifc_grid.py  test_ifc_joint.py  test_ifc_loader.py  test_ifc_member.py  test_ifc_noboribari.py  test_ifc_rafter.py  test_ifc_rebar.py  test_ifc_roof.py  test_ifc_section.py  test_ifc_sheet.py  test_ifc_story.py  test_ifc_structural_class.py  test_ifc_tag.py  test_init.py  test_integration.py  test_member.py  test_story.py  test_trace.py  test_vw_anchor_bolt.py  test_vw_column.py  test_vw_column_mark.py  test_vw_execute.py  test_vw_fire_brace.py  test_vw_floor.py  test_vw_floor_post.py  test_vw_footing.py  test_vw_grid.py  test_vw_joint.py  test_vw_member.py  (+6 more)
tests/fixtures/: README.md  グレー本モデルプラン1【3階】.ifc  グレー本モデルプラン2【3階】.ifc  サンプル1 (住木邸新築工事).ifc  スキップフロア_サンプル.ifc  伏図次郎【2階】.ifc
vw_import_ifc_homeskz/: grid.py
(+17 files in other folders)
