[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorworks-plugin-import-ifc-homeskz"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["ifcopenshell"]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]

[tool.setuptools.package-dir]
"" = "src"
